# claw

./: Cargo.toml  README.md
examples/: csv_to_sql.rs  etl_transform.rs  parquet_to_sql.rs  sql_to_parquet.rs  sql_to_sql.rs
examples/data/: sample.csv  sample.parquet
src/: arrow_support.rs  lib.rs  sql_value_writer.rs
tests/: arrow_integration.rs
